// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Save to empty database both 1`] = `
[
  [
    "CREATE TABLE tinybase(json)",
    [
      {
        "json": "[{"t1":{"r1":{"c1":1}}},{"v1":1}]",
      },
    ],
  ],
]
`;

exports[`Save to empty database nothing 1`] = `
[
  [
    "CREATE TABLE tinybase(json)",
    [
      {
        "json": "[{},{}]",
      },
    ],
  ],
]
`;

exports[`Save to empty database tables 1`] = `
[
  [
    "CREATE TABLE tinybase(json)",
    [
      {
        "json": "[{"t1":{"r1":{"c1":1}}},{}]",
      },
    ],
  ],
]
`;

exports[`Save to empty database values 1`] = `
[
  [
    "CREATE TABLE tinybase(json)",
    [
      {
        "json": "[{},{"v1":1}]",
      },
    ],
  ],
]
`;
